re-factoring: minor improvements